Changes the background to blue to make outline more visible for visual correction purposes

--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,9 @@
 table, tr{
     background: yellow;
     border: 2px red solid;
+    border-radius: 12px;
+}
+
+td {
+    background-color: blue;
 }
